# hummingscan

./: .gitignore  Cargo.toml
server/: .env.sample  Cargo.toml
server/src/: main.rs
ui/: Cargo.toml  index.html
ui/src/: main.rs
