[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.3.0"
dotenv = "0.15.0"
reqwest = { version = "0.10.9", features = ["blocking"] }
# rocket = "=0.5.0-rc.3"
tokio = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
