[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.0-beta.4"
actix-rt = "2.8.0"
actix-ws = "0.2.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
tokio = "1.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
