[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = { version = "0.2.0", features = ["http"] }
gloo-console = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.87"
futures = "0.3.28"
web-sys = { version = "0.3.64", features = ["console"] }